<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">njcit_leave</string>
    <string name="user_name_label">用户名</string>
    <string name="role_label">角色</string>
    <string name="password_label">密码</string>
	<string name="login_label">确定</string>
	<string name="user_name_placeholder">40916P01</string>
	<string name="password_placeholder">123456</string>
	<string name="role_placeholder">0</string>
	<string name="mainAcitvity">主页</string>
    <string name="course_leave_label">课程请假</string>
    <string name="day_leave_label">天次请假</string>
    <string name="leave_date_label">请假日期</string>
    <string name="course_name_label">请假课程</string>
    <string name="teacher_name_label">任课老师</string>
    <string name="course_index_label">请假节数</string>
    <string name="student_mobile_label">联系电话</string>
    <string name="student_leave_note_label">请假事由</string>
    <string name="leave_start_date_label">开始日期</string>
    <string name="leave_end_date_label">结束日期</string>
	<string name="add_leave_bt">确定</string>
    <string name="history_start_date">开始日期</string>
    <string name="history_end_date">结束日期</string>
    <string name="approve_state_label">审批状态</string>
</resources>
