<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:gravity="center|center_horizontal|center_vertical"
        >

    <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dip"
            android:layout_marginRight="10dip"
            >
        <TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
                android:background="@drawable/shape_top_corner_no_bottom_line"
                >
            <TextView android:text="@string/user_name_label"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:layout_marginRight="10dip"  />
            <EditText android:layout_weight="1"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:background="@null"
					  android:singleLine="true"
					  android:id="@+id/userNo"
					  android:text="@string/user_name_placeholder"/>
        </TableRow>
        <TableRow
				android:layout_width="fill_parent"
				android:layout_height="wrap_content"
				android:padding="10dip"
                android:background="@drawable/shape_no_corner_without_bottom"
                >
            <TextView android:text="@string/password_label"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:layout_marginRight="10dip"  />
            <EditText android:layout_weight="1" android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:background="@null"
					  android:singleLine="true"
					  android:password="true"
					  android:id="@+id/password"
					  android:text="@string/password_placeholder"/>
        </TableRow>
        <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_horizontal"
				android:padding="10dip"
				android:background="@drawable/shape_bottom_corner_no_top_line"
                >
            <TextView android:text="@string/role_label"
					  android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:layout_marginRight="10dip"  />
            <EditText android:layout_weight="1" android:layout_width="wrap_content"
					  android:layout_height="wrap_content"
					  android:layout_gravity="center_vertical"
					  android:background="@null"
					  android:singleLine="true"
					  android:id="@+id/role"
					  android:text="@string/role_placeholder"/>
        </TableRow>
		<Button android:layout_gravity="center" android:text="@string/login_label" android:id="@+id/loginBT"/>
    </TableLayout>
</LinearLayout>

