<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
			  android:layout_width="fill_parent"
			  android:layout_height="fill_parent"
			  android:orientation="vertical" >
    <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_gravity="center_horizontal">
        <RadioGroup android:layout_width="match_parent" android:layout_height="match_parent" android:orientation="horizontal" android:id="@+id/leaveTypeRG">
            <RadioButton android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/course_leave_label" android:layout_weight="1"
                         android:layout_marginRight="20dip"
                         android:id="@+id/courseLeaveRB"
						 android:checked="true"
                        />
            <RadioButton android:layout_width="wrap_content" android:layout_height="match_parent" android:text="@string/day_leave_label" android:layout_weight="1"
                         android:id="@+id/dayLeaveRB"
                         />
        </RadioGroup>
    </LinearLayout>
    <ScrollView android:layout_width="match_parent" android:layout_height="wrap_content" android:overScrollMode="never" android:layout_weight="1">
        <LinearLayout android:layout_width="match_parent" android:layout_height="match_parent"   android:layout_weight="1" android:orientation="vertical" android:paddingLeft="10dip" android:paddingRight="10dip">
            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/courseLeaveTL"
                    >
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/leave_date_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            />
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/course_name_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            />
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/teacher_name_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            />
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/course_index_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            />
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/student_mobile_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            />
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/student_leave_note_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            android:gravity="top"
                            android:lines="3"
                            />

                </TableRow>
            </TableLayout>

            <TableLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="gone"
                    android:id="@+id/dayLeaveTL"
                    >
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/leave_start_date_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
							android:focusable="false"
                            />
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/leave_end_date_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            />
                </TableRow>
                 <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/student_mobile_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            />
                </TableRow>
                <TableRow
                        android:layout_width="fill_parent"
                        android:layout_height="fill_parent">
                    <TextView android:layout_width="wrap_content"
                              android:layout_height="match_parent"
                              android:gravity="center_vertical"
                              android:text="@string/student_leave_note_label"
                            />
                    <EditText
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:layout_marginLeft="20dip"
                            android:gravity="top"
                            android:lines="3"
                            />

                </TableRow>
            </TableLayout>
			<LinearLayout android:layout_width="match_parent" android:layout_height="wrap_content">
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
				<Button android:id="@+id/add_leave_bt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1" android:text="@string/add_leave_bt" android:layout_gravity="center_horizontal"/>
				<TextView android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_weight="1"/>
			</LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>


